K8s/example-cluster-work/english-greeter-deployment.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "english-greeter-deployment"
  namespace: "default"
  labels:
    app: "english-greeter"
spec: # this is where we create the replicaset specs
  replicas: 3
  selector:
    matchLabels:
      app: "english-greeter"
  template: # this is where the pod information starts
    metadata: # I am not setting a name for the pods because the deployment will handle that for me
      labels:
        app: "english-greeter"
    spec:
      # terminationGracePeriodSeconds: 30
      containers:
      - name: "english-greeter-app"
        image: "esuminski/english:logging"
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080

        volumeMounts: # this tells Kubernetes what directory/files to add to a volume
          - mountPath: /logs
            name: logs # this is the volume we want the logs mounted to


      volumes:
        - name: logs # this is the volume that will have data from the pod stored in
