K8s/example-cluster-work/greeter-deployment.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "greeter-deployment"
  namespace: "default"
  labels:
    deployment: "greeter-deployment"
spec: # this is where we create the replicaset specs
  replicas: 3
  # # minReadySeconds: 5
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxSurge: 1
  #     maxUnavailable: 0
  selector:
    matchLabels:
      pod: "greeter-pod"
  template: # this is where the pod information starts
    metadata: # I am not setting a name for the pods because the deployment will handle that for me
      labels:
        pod: "greeter-pod"
    spec:
      # terminationGracePeriodSeconds: 30
      containers:
      - name: "greeter-app"
        image: "esuminski/english:fixed"
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
