K8s/example-cluster-work/greeter-pod.yml
apiVersion: v1 
kind: Pod
metadata:
  name: greeter-pod
  labels:
    app: english-greeter

spec:
  containers:
    - name: greeter-container
      image: esuminski/english:broken
      ports:
      - containerPort: 8080
