K8s/example-cluster-work/english-greeter-clusterIp.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "english-greeter-clusterip"
  namespace: "default"
  labels:
    app: "english-greeter"
spec:
  ports:
  - name: http # this is needed for your service monitor to target this service
    protocol: "TCP"
    port: 80
    targetPort: 8080
  selector:
    app: "english-greeter"
  type: "ClusterIP"
