K8s/example-cluster-work/english-greeter-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: greeter-loadbalancer
spec:
  type: LoadBalancer 
  selector:
    pod: greeter-pod
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 8080
