K8s/example-cluster-work/greeter-clusterId.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "greeter-clusterip"
  namespace: "default"
  labels:
    service: "greeter-clusterip"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
  selector:
    pod: "greeter-pod"
  type: "ClusterIP"
