K8s/example-cluster-work/spanish-greeter-clusterIp.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "spanish-greeter-clusterip"
  namespace: "default"
  labels:
    app: "spanish-greeter"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
  selector:
    app: "spanish-greeter"
  type: "ClusterIP"
